# daggerheart-bot

./: .gitignore  .replit  README.md  api_simple.py  bot_replit.py  main.py  pyproject.toml  railway.toml  render.yaml  requirements-minimal.txt  requirements.txt  run.py  start.sh
api/: main.py
api/routes/: character.py  game.py
api/services/: deepseek.py  game_logic.py
bot/: main(orig).py  main.py
config/: settings.py
database/: database.py  models.py
webapp/: index.html
webapp/css/: style.css
webapp/js/: app.js  telegram.js
