[tool.poetry]
name = "daggerheart-bot"
version = "1.0.0"
description = "Telegram bot for Daggerheart RPG with Mini App"
author = "Philip K. Dick"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.104.1"
uvicorn = "0.24.0"
httpx = "0.25.2"
python-dotenv = "1.0.0"
pydantic = "2.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"